# arduino-tank

./: .gitignore  CMakeLists.txt  LICENSE  README.md  console.py  protocol.txt  settings.ini
assets/: gui_sketch.xcf  main_window.ui
console/: logging.py
console/connections/: com_connection.py  connection.py
controller/src/: byteswap.c  byteswap.h  controller.c  controller.h  gui.c  gui.h  main.c  state.h
main/: main.ino
tank/: Autorun.cpp  Autorun.hpp  Engine.cpp  Engine.hpp  Hardware.cpp  Hardware.hpp  HeadSensor.cpp  HeadSensor.hpp  Sensor.cpp  Sensor.hpp  Thermometer.cpp  Thermometer.hpp  communication.cpp  communication.hpp  pinconfig.hpp  tank.ino
tank_control/: __main__.py  application.py  average.py  enums.py  timer.py
tank_control/communication/: bluetooth_controller.py  command.py  controller.py  result.py  test_controller.py
